# DiscordAiChatBot

./: README.md
discord-bot-cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  bot.cpp  setup.sh
